Fixed collapsable menu and added tu mandas in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,10 @@ img {
   font-size: 1.3em;
 }
 
+.row > section > a {
+  color: #ffffff;
+}
+
 /** END OF FOOTER **/
 
 /********** Large devices only **********/
